Add method to User and scripts that displays daily water list

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -193,6 +193,12 @@ main {
   margin-bottom: .2vw;
 }
 
+.hydration-weekly-avg,
+.hydration-week-data-list {
+  text-align: center;
+  width: 100%;
+}
+
 .trend-line {
   font-size: 2vw;
   text-align: center;
