Create mixin for _buttons file #36

--- a/src/css/_buttons.scss
+++ b/src/css/_buttons.scss
@@ -1,4 +1,15 @@
 /* BUTTONS */
+
+@mixin buttons(image) {
+  background-position: center;
+  background-size: 3.4vw;
+  border: none;
+  display: inline;
+  height: 3.4vw;
+  margin-left: 1vw;
+  width: 3.4vw;
+  background-image: url(image)
+}
 .info-button,
 .friends-button,
 .calendar-button,
