--- a/src/css/_class-changes.scss
+++ b/src/css/_class-changes.scss
@@ -3,14 +3,19 @@
   display: none;
 }
 
-.green-text {
-  color: green;
-}
+// .green-text {
+//   color: green;
+// }
 
-.red-text {
-  color: red;
-}
+// .red-text {
+//   color: red;
+// }
 
-.yellow-text {
-  color: #F8BA00;
-}
+// .yellow-text {
+//   color: #F8BA00;
+// }
+
+$green-text: green;
+$red-text: red;
+$yellow-text: #F8BA00;
+$light-blue: #54C6BE;
