Change styling for submit button to light blue #36

--- a/src/css/_buttons.scss
+++ b/src/css/_buttons.scss
@@ -31,7 +31,7 @@
 
 .submit-button {
   background-image: url(../images/download.svg);
-  background-color: #54C6BE;
+  background-color: $light-blue
 }
 
 .steps-go-back-button {
