Change styling for hydrat card to light blue #36

--- a/src/css/_display.scss
+++ b/src/css/_display.scss
@@ -34,7 +34,7 @@ main {
 }
 
 #hydration-card-container {
-  background-color: #54C6BE;
+  background-color: $light-blue;
   grid-area: hydration;
   margin: .5vw;
 }
