Add commented out code for sleep-trending button

--- a/src/css/_buttons.scss
+++ b/src/css/_buttons.scss
@@ -116,6 +116,9 @@
   @include buttons('sleep-calendar.png');
 }
 
+// .sleep-trending-button {
+//   @include buttons('sleep-trending.png');
+// }
 
 .steps-trending-button {
   // background-image: url(../images/steps-trending.png);
