Adjust bot-row buttons in scss #46

--- a/src/css/_display.scss
+++ b/src/css/_display.scss
@@ -12,7 +12,7 @@ main {
   display: flex;
   flex-direction: column;
   height: 20vw;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 .main-card-top-row {
