Delete date input from steps card and remove css and html for date input element

--- a/src/css/_text.scss
+++ b/src/css/_text.scss
@@ -29,6 +29,12 @@ h5 {
   text-align: center;
 }
 
+.step-goal-comparison-all-users {
+  font-size: 1.8vw;
+  text-align: center;
+  width: auto;
+}
+
 p {
   font-family: 'Work Sans', sans-serif;
   font-size: 1.2vw;
@@ -40,3 +46,4 @@ p {
   width: 9vw;
   word-break: keep-all;
 }
+
