--- a/src/css/_display.scss
+++ b/src/css/_display.scss
@@ -69,9 +69,10 @@ main {
   color: #FFFFFF;
   font-size: 16px;
   font-weight: 300;
+  margin-left: 5px;
   padding: 2px;
   width: 75px;
-  height: 30px;
+  height: 50px;
 }
 
 ::placeholder {
