--- a/src/css/_display.scss
+++ b/src/css/_display.scss
@@ -57,7 +57,6 @@ main {
 .card-data-line {
   display: flex;
   justify-content: center;
-  margin-bottom: 2vw;
 }
 
 .input-box {
@@ -74,8 +73,8 @@ main {
   font-weight: 300;
   margin-left: 5px;
   padding: 2px;
-  width: 75px;
-  height: 50px;
+  width: 80px;
+  height: 40px;
 }
 
 ::placeholder {
@@ -104,8 +103,8 @@ main {
   width: 100%;
 }
 
-.trend-line {
-  font-size: 2vw;
-  text-align: center;
-  width: 20vw;
-}
+// .trend-line {
+//   font-size: 2vw;
+//   text-align: center;
+//   width: 20vw;
+// }
