--- a/src/css/_text.scss
+++ b/src/css/_text.scss
@@ -47,3 +47,12 @@ p {
   word-break: keep-all;
 }
 
+.sleep-input-instructions,
+.steps-input-instructions {
+  font-size: 1.5vw;
+  font-weight: 500;
+  margin-right: 2.5vw;
+  margin-left: 2.5vw;
+  text-align: center;
+  width: auto;
+}
