--- a/src/css/_display.scss
+++ b/src/css/_display.scss
@@ -62,16 +62,21 @@ main {
   justify-content: center;
   align-items: flex-end;
   margin-left: 7px;
+   border-radius: 5%;
 }
 
 .inputs {
   background-color: transparent;
   color: #FFFFFF;
   font-size: 16px;
+  text-align: center;
   font-weight: 300;
-  padding: 2px;
   width: 75px;
   height: 30px;
+  border-radius: 5px;
+  border-color: black;
+  border-width: thin;
+  margin-bottom: 1.5vw;
 }
 
 ::placeholder {
