--- a/src/css/_buttons.scss
+++ b/src/css/_buttons.scss
@@ -6,7 +6,7 @@
   border: none;
   display: inline;
   height: 3.4vw;
-  margin: .5vw 1vw;
+  margin: 1.5vw 1vw;
   width: 3.4vw;
   background-image: url("../images/#{$image}")
 }
