--- a/src/css/_display.scss
+++ b/src/css/_display.scss
@@ -1,13 +1,20 @@
 /* MAIN */
 main {
-  display: grid;
-  grid-template-areas:
-  'steps hydration'
-  'stairs sleep';
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   height: 100%;
+  width: 100%;
 }
 
-.main-card {
+.card-container {
+  height: 25vw;
+  width: 47%;
+  overflow: scroll;
+}
+
+.main-card, 
+#card {
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -26,7 +33,11 @@ main {
 
 .main-card-bottom-row {
   text-align: center;
-  width: 100%;
+  margin-left: auto;
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 #steps-card-container {
@@ -78,7 +89,7 @@ main {
   border-radius: 5px;
   border-color: black;
   border-width: thin;
-  margin-bottom: 1.5vw;
+  margin-bottom: 2vw;
 }
 
 ::placeholder {
@@ -107,8 +118,3 @@ main {
   width: 100%;
 }
 
-.trend-line {
-  font-size: 2vw;
-  text-align: center;
-  width: 20vw;
-}
